--- a/mqtt-hs.cabal
+++ b/mqtt-hs.cabal
@@ -1,5 +1,5 @@
 name:                mqtt-hs
-version:             1.0.1
+version:             1.2
 synopsis:            A MQTT client library.
 homepage:            http://github.com/k00mi/mqtt-hs
 license:             GPL-3
@@ -17,13 +17,13 @@ description:
 
     See the 'Network.MQTT' module for documentation and the project repository
     for some <https://github.com/k00mi/mqtt-hs/blob/master/examples examples>.
-tested-with:         GHC==8.6.1, GHC==8.4.1, GHC==8.2.2, GHC==8.0.2
+tested-with:         GHC==8.8.1, GHC==8.10.1
 
 
 library
   exposed-modules:     Network.MQTT, Network.MQTT.Parser, Network.MQTT.Encoding,
                        Network.MQTT.Types, Network.MQTT.Internal
-  build-depends:       base >=4.6 && <4.12,
+  build-depends:       base >=4.13 && <4.15,
                        async >=2.0 && <2.3,
                        mtl >=1.1 && <2.3,
                        transformers >=0.2 && <0.6,
@@ -31,7 +31,7 @@ library
                        bytestring >=0.10.2 && <0.11,
                        text >=0.11.0.6 && <1.3,
                        network >=2.0 && <2.9,
-                       singletons >=0.9 && < 2.6,
+                       singletons >=2.6 && < 2.8,
                        stm >=2.4 && <2.6,
                        monad-loops >=0.3 && <0.5
   default-language:    Haskell2010
