--- a/mqtt-hs.cabal
+++ b/mqtt-hs.cabal
@@ -33,7 +33,8 @@ library
                        network >=2.0 && <2.9,
                        singletons >=0.9 && < 2.6,
                        stm >=2.4 && <2.6,
-                       monad-loops >=0.3 && <0.5
+                       monad-loops >=0.3 && <0.5,
+                       connection
   default-language:    Haskell2010
   ghc-options: -Wall
                -fno-warn-name-shadowing
